--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>contactus</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body style="background-color:black;">
+    <script src="script.js"></script>
+    <div class="logo">
+      <img src="logo.png" width=125>
+    </div>
+    <div class="email">
+      <a href="mailto:stefanfourie@peakseducation.com" style="color:#ffae00">EMAIL PEAKS EDUCATION</a>
+    </div>
+    <div class="text">
+      <p style="color:#ffae00">(Follow the link to email stefanfourie@peakseducation.com)
+  </body>
+</html>
