--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="logo">
-      <img src="logo.png" width=125>
+      <img src="peaks_original_transparent_25.png" width=125>
     </div>
     <div class="email">
       <a href="mailto:stefanfourie@peakseducation.com" style="color:#ffae00">EMAIL PEAKS EDUCATION</a>
