--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="logo">
-      <img src="peaks_original_transparent_25.png" width=125>
+      <img src="Peaks_original_transparent_25.png" width=125>
     </div>
     <div class="email">
-      <a href="mailto:stefanfourie@peakseducation.com" style="color:#ffae00">EMAIL PEAKS EDUCATION</a>
+      <a href="mailto:stefanfourie@peakseducation.com">EMAIL PEAKS EDUCATION</a>
     </div>
     <div class="text">
       <p style="color:#ffae00">(Follow the link to email stefanfourie@peakseducation.com)
