--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       <a href="mailto:stefanfourie@peakseducation.com">EMAIL PEAKS EDUCATION</a>
     </div>
     <div class="text">
-      <p style="color:#ffae00">(Follow the link to email stefanfourie@peakseducation.com)
+      <p>(Follow the link to email stefanfourie@peakseducation.com)</p>
   </body>
 </html>
