--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     </div>
     <div class="text">
       <p>(Follow the link to email stefanfourie@peakseducation.com)</p>
+    </div>
   </body>
 </html>
