--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>contactus</title>
+    <title>Peaks Education</title>
+    <link rel="icon" href="Peaks_original_transparent_25.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:black;">
