--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="logo">
-      <img src="Peaks_original_transparent_25.png" width=125>
+      <img src="Peak hollow transparent.png" width=125>
     </div>
     <div class="email">
-      <a href="mailto:stefanfourie@peakseducation.com" style="color: #ffae00">EMAIL PEAKS EDUCATION </a>
+      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">EMAIL PEAKS EDUCATION </a>
     </div>
     <div class="text">
-      <p style="color: #ffae00">(Follow the link to email stefanfourie@peakseducation.com)</p>
+      <p style="color: #ffae00">(Follow the link to email stefan@peakseducation.com)</p>
     </div>
   </body>
 </html>
