--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Peaks Education</title>
-    <link rel="icon" href="Peaks_original_transparent_25.png">
+    <link rel="icon" href="img/logo.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="logo">
-      <img src="Peak hollow transparent.png" width=125>
+      <img src="img/banner.png" width=125>
     </div>
     <div class="email">
-      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">EMAIL PEAKS EDUCATION </a>
+      <a style="color: #ffae00">Welcome to Peaks.</a>
     </div>
     <div class="text">
-      <p style="color: #ffae00">(Follow the link to email stefan@peakseducation.com)</p>
+      <p href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</p>
     </div>
   </body>
 </html>
