--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Peaks Education</title>
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="img/logotrimmed.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="logo">
-      <img src="img/banner.png" width=125>
+      <img src="img/banner.png" width=100%>
     </div>
     <div class="email">
-      <a style="color: #ffae00">Welcome to Peaks.</a>
+      <b style="color: #ffae00">Welcome to Peaks.</b>
     </div>
     <div class="text">
-      <p href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</p>
+      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</a>
     </div>
   </body>
 </html>
