--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Peaks Education</title>
-    <link rel="icon" href="img/logotrimmed.png">
+    <link rel="icon" href="img/logo.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:black;">
