--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   </head>
   <body style="background-color:black;">
     <script src="script.js"></script>
-    <hr>
     <div class="logo">
       <img src="img/banner1.png" width=100%>
     </div>
-    <div class="text">
+    <div class="text1">
       <b style="color: #ffae00">Welcome to Peaks.</b>
     </div>
-    <div class="email">
+    <div class="email1">
       <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</a>
     </div>
   </body>
