--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="logo">
       <img src="img/banner1.png" width=100%>
     </div>
-    <div class="text1">
+    <div class="email">
       <b style="color: #ffae00">Welcome to Peaks.</b>
     </div>
-    <div class="email1">
+    <div class="text">
       <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</a>
     </div>
   </body>
