--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="logo">
       <img src="img/banner1.png" width=100%>
     </div>
-    <div class="email">
+    <!--<div class="email">
       <b style="color: #ffae00">Welcome to Peaks.</b>
-    </div>
+    </div> -->
     <div class="text">
       <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</a>
     </div>
