--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <img src="img/banner1.png" width=100%>
     </div>
     <!--<div class="email">
-      <b style="color: #ffae00">Welcome to Peaks.</b>
+      <b style="color: #ffae00">Welcome to Peaks Education.</b>
     </div> -->
     <div class="text">
-      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Follow this link to email stefan@peakseducation.com</a>
+      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Website is still being worked on. For inquiries, email stefan@peakseducation.com or arhan@peakseducation.com.</a>
     </div>
   </body>
 </html>
