Seperate links for emails

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <b style="color: #ffae00">Welcome to Peaks Education.</b>
     </div> -->
     <div class="text">
-      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00">Website is still being worked on. For inquiries, email stefan@peakseducation.com or arhan@peakseducation.com.</a>
+      <p style="color: #ffae00">Website is still under construction. For enquiries, email us at:</p>
+      <a href="mailto:stefan@peakseducation.com" style="color: #ffae00"> stefan@peakseducation.com</a>
+      <p style="color: #ffae00">or</p>
+      <a href="mailto:arhan@peakseducation.com" style="color: #ffae00"> arhan@peakseducation.com</a>
     </div>
   </body>
 </html>
