--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
       <b style="color: #ffae00">Welcome to Peaks Education.</b>
     </div> -->
     <div class="text">
-      <p style="color: #ffae00">Website is still under construction. For enquiries, email us at:</p>
+      <b style="color: #ffae00">Website is still under construction. For enquiries, email us at:</b>
       <a href="mailto:stefan@peakseducation.com" style="color: #ffae00"> stefan@peakseducation.com</a>
-      <p style="color: #ffae00">or</p>
       <a href="mailto:arhan@peakseducation.com" style="color: #ffae00"> arhan@peakseducation.com</a>
     </div>
   </body>
