--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="logo">
-      <img src="img/banner1.png" width=100%>
+      <!--<img src="img/banner1.png" width=100%>-->
+      <p style="background-image: url('img/banner1.png');"></p>
     </div>
     <!--<div class="email">
       <b style="color: #ffae00">Welcome to Peaks Education.</b>
