--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
   </head>
   <body style="background-color:black;">
     <script src="script.js"></script>
+    <div class="image">
+      <img src="img/banner1.png" width=100%>
+    </div>
     <div class="logo">
-      <!--<img src="img/banner1.png" width=100%>-->
-      <p style="background-image: url('img/banner1.png');"></p>
+      <img src="img/hollow.png" width=125>
     </div>
     <!--<div class="email">
       <b style="color: #ffae00">Welcome to Peaks Education.</b>
-    </div> -->
+    </div> 
+    <p style="background-image: url('img/banner1.png');"></p>-->
     <div class="text">
-      <b style="color: #ffae00">Website is still under construction. For enquiries, email us at:</b>
+      <b style="color: #ffae00">Website is still under construction.</b>
+      </br>
+      </br>
+      <a style="color: #ffae00">For enquiries, email us at:</a>
       <a href="mailto:stefan@peakseducation.com" style="color: #ffae00"> stefan@peakseducation.com</a>
+      <a style="color: #ffae00">or</a>
       <a href="mailto:arhan@peakseducation.com" style="color: #ffae00"> arhan@peakseducation.com</a>
     </div>
   </body>
