--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!--<div class="email">
       <b style="color: #ffae00">Welcome to Peaks Education.</b>
     </div> 
-    <p style="background-image: url('img/banner1.png');"></p>-->
+    <p style="background-image: url('img/banner1.png');"></p>
+    commenting-->
     <div class="text">
       <b style="color: #ffae00">Website is still under construction.</b>
       </br>
