--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <b style="color: #ffae00">Welcome to Peaks Education.</b>
     </div> 
     <p style="background-image: url('img/banner1.png');"></p>
-    commenting-->
+    commentingagain-->
     <div class="text">
       <b style="color: #ffae00">Website is still under construction.</b>
       </br>
