--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body style="background-color:black;">
     <script src="script.js"></script>
     <div class="image">
-      <img src="img/banner1.png" width=100%>
+      <img src="img/banner.png" width=100%>
     </div>
     <div class="logo">
       <img src="img/hollow.png" width=125>
