--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <p style="background-image: url('img/banner1.png');"></p>
     commentingagain-->
     <div class="text">
-      <b style="color: #ffae00">Website is still under construction.</b>
+      <b style="color: #ffae00">This website is still under construction.</b>
       </br>
       </br>
-      <a style="color: #ffae00">For inquiries, email us at:</a>
+      <a style="color: #ffae00">For inquiries, please email us at:</a>
       <a href="mailto:stefan@peakseducation.com" style="color: #ffae00"> stefan@peakseducation.com</a>
       <a style="color: #ffae00">or</a>
       <a href="mailto:arhan@peakseducation.com" style="color: #ffae00"> arhan@peakseducation.com</a>
