--- a/planpricing/plans.html
+++ b/planpricing/plans.html
@@ -310,7 +310,7 @@
               <p>
                 Peaks Education is a company dedicated to delivering quality software and programming courses to Primary and High school students.
                 <br>
-                <strong>Email:</strong> contacts@peakseducation.org<br>
+                <strong>Email:</strong> contact@peakseducation.org<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
