--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="col-lg-4 col-sm-6">
               <div class="item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="300"> <span class="icon feature_box_col_three"><i class="fa fa-hourglass-half"></i></span>
                 <h6>24 x 7 User Support</h6>
-                <p>If our customer has any problem or query we are always happy to help them. Contact us as contacts@peakseducation.com</p>
+                <p>If our customer has any problem or query we are always happy to help them. Contact us as contact@peakseducation.com</p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="400">
