--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
                 <p>If our customer has any problem or query we are always happy to help them. Contact us as contact@peakseducation.com</p>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="400">
-              <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-database"></i></span>
+            <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="400"> 
+              <div class="item"> <span class="icon feature_box_col_four"><i class="bi bi-journal-arrow-up"></i></span>
                 <h6>Quality lessons</h6>
                 <p>Everyone wants to get on top of the mountain, but it takes good gear to get up there. That's where we come in. Our lessons fly you to the top of your class</p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="500">
-              <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-upload"></i></span>
+              <div class="item"> <span class="icon feature_box_col_five"><i class="bi bi-book-half"></i></span>
                 <h6>Curriculum advantage</h6>
                 <p>We use latest technology for the latest world because we know the demand of people of the future. Remember, you need to <i>use</i> your programming skill!</p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="600">
-              <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-camera"></i></span>
+              <div class="item"> <span class="icon feature_box_col_six"><i class="bi bi-coin"></i></span>
                 <h6>Affordable cost</h6>
                 <p>Our quality coding program, taught in a most engaging format, charges low so you can learn more and lose less.</p>
               </div>
@@ -175,7 +175,7 @@
           </div>
         </div>
       </div>    
-    </section> 
+    </section>
     <!--End of Why Us page-->
     
     <!-- ======= Services Section ======= -->
