--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="100">
-          <div class="col-lg-6">
+          <div> <!-- class="col-lg-6" -->
              <div class="info-box mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
