--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
                   <h4>Dedicated private lessons</h4>
-                  <p>Our private lessons give you the attention you need for an in depth course on a prgramming language.</p>
+                  <p>Our private lessons give you the attention you need for an in depth course on a programming language.</p>
                 </div>
               </div>
             </div><!-- End .content-->
@@ -151,13 +151,13 @@
             <div class="col-lg-4 col-sm-6">
               <div class="item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="300"> <span class="icon feature_box_col_three"><i class="fa fa-hourglass-half"></i></span>
                 <h6>24 x 7 User Support</h6>
-                <p>If our customer has any problem or query we are always happy to help them. Contact us as contact@peakseducation.com</p>
+                <p>If our customer has any problem or query we are always happy to help them. Contact us as contact@peakseducation.com.</p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="400"> 
               <div class="item"> <span class="icon feature_box_col_four"><i class="bi bi-journal-arrow-up"></i></span>
                 <h6>Quality lessons</h6>
-                <p>Everyone wants to get on top of the mountain, but it takes good gear to get up there. That's where we come in. Our lessons fly you to the top of your class</p>
+                <p>Everyone wants to get on top of the mountain, but it takes good gear to get up there. That's where we come in. Our lessons fly you to the top of your class.</p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1250" data-aos-delay="500">
@@ -253,7 +253,7 @@
                 <div class="border"></div>
                 <li><i class="bi bi-check-circle-fill"></i><strong> 24h</strong> Support</li>
               </ul>
-              <a class="buynow" href="mailto:stefan@peakseducation.com">Buy Now</a>
+              <a class="buynow" href="mailto:contact@peakseducation.com">Buy Now</a>
               <br>
               <!-- <a href="https://www.flaticon.com/free-icons/free" title="free icons">Free icons created by Soodesign - Flaticon</a> -->
     
